@@ -478,14 +478,16 @@ static void setup_ssl(tcptest_t *item)
 
 	if (item->sslctx == NULL) {
 		switch (item->ssloptions->sslversion) {
+		  case SSLVERSION_TLS1:
+			item->sslctx = SSL_CTX_new(TLSv1_client_method()); break;
 #ifdef HAVE_SSLV2_SUPPORT
 		  case SSLVERSION_V2:
 			item->sslctx = SSL_CTX_new(SSLv2_client_method()); break;
 #endif
+#ifdef HAVE_SSLV3_SUPPORT
 		  case SSLVERSION_V3:
 			item->sslctx = SSL_CTX_new(SSLv3_client_method()); break;
-		  case SSLVERSION_TLS1:
-			item->sslctx = SSL_CTX_new(TLSv1_client_method()); break;
+#endif
 		  default:
 			item->sslctx = SSL_CTX_new(SSLv23_client_method()); break;
 		}
