@@ -10,6 +10,7 @@ xymon (4.3.27) stable; urgency=medium
      regular CGI
    * Properly recognize https URLs as summary links (Thanks, 
      David Steinn Geirsson)
+   * Add compile-time check for SSLv3 support
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  XXX, XX Mar 2016 15:00:00 -0800
 
